Update Execute and Improve on Services Page

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -186,6 +186,7 @@
 
 <h3 class="text-center pt-3">Market Research & Business Strategy</h3>
 <div style="text-align:center;"><img class="img-fluid" src="{% static 'plan.png' %}" height=200 width=200 /></div>
+<br>
 <p>How can your EdTech offering compete in an increasingly diverse and rapidly growing industry?</p>
 <p>At EdTech Sales Rep Consutling, we understand the practices and sales strategies of the leading EdTech companies. Not only will we help you identify and implement a successful sales strategy, but we will also empower your salespeople with the tools and processes they need to uncover potential customers' business needs and motives for buying that align specifically with your unique EdTech solution.</p>
 <p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solution is the best option is not as easy as it may seem.</p>
@@ -195,26 +196,29 @@
 <br />
 <br />
 
-<h3 class="text-center pt-3">Executive Search & Recruiting</h3>
+<h3 class="text-center pt-3"><a id="recruit">Executive Search & Recruiting</h3></a>
 <div style="text-align:center;"><img class="img-fluid" src="{% static 'hiring_2.png' %}" height=200 width=200 /></div>
-<p>Success EdTech sales executive have to have the tenacity of a New York City real estate broker, along with the compassion of a social worker. The same high performing EdTech salespeople need to be tech savvy, organized, and feel the missionary zeal to provide super customer service whenever their schools need help. How do are you supposed to find a sales superstar with all these qualities - let alone many similar candidates to fulfill all of your sales responsibilities year-in and year-out? Partner with EdTech Sales Rep Consulting for all your recruiting, interviewing, and hiring needs.</p>
+<p>Successful EdTech sales executives have to have the tenacity of a New York City real estate broker, along with the compassion of a social worker. The same high performing EdTech salespeople need to be tech savvy, organized, and feel the missionary zeal to provide super customer service whenever their schools need help. How do are you supposed to find a sales superstar with all these qualities - let alone many similar candidates to fulfill all of your sales responsibilities year-in and year-out? Partner with EdTech Sales Rep Consulting for all your recruiting, interviewing, and hiring needs.</p>
 <p>EdTech Sales Rep Consulting will:</p>
 <ul>
 <li>Employ a thorough approach designed towards identifying the ideal candidate for your role and your company</li>
-<li>Evaluation of your organization's current sales procedures to determine what types of new hires could propel your company to future</li>
+<li>Evaluate of your organization's current sales procedures to determine what types of new hires could propel your company to future</li>
 <li>Craft job descriptions that will attract attention from the highest caliber candidates on over-saturated job boards</li>
-<li>Screen prospects with targeted questions to identify strengths and weaknesses specific to the EdTech field based on our in depth market knowledge</li>
+<li>Screen prospects with targeted questions to identify strengths and weaknesses specific to the EdTech field, based on our in depth market knowledge</li>
 <li>Define and work within time frame and budget for hiring</li>
 </ul>
-<p>With extensive knowledge of the industry, the EdTech Sales Rep Consulting recruitment model takes an intensive approach to finding the best fit for your company. If you are interested in partnering with Ed Tech Sales Rep Consulting to jump-start your Executive Search & Recruiting efforts, please <a href="#consultation">click here</a> to email us for a free consultation.</p>
+<p>With extensive knowledge of the industry, the EdTech Sales Rep Consulting recruitment model takes an intensive approach to finding the best fit for your company. If you are interested in partnering with Ed Tech Sales Rep Consulting to jump-start or augment your Executive Search & Recruiting efforts, please <a href="#consultation">click here</a> to email us for a free consultation.</p>
 <br />
 <br />
-<h3 class="text-center pt-3">Execute & Improve</h3>
-<div style="text-align:center;"><img class="img-fluid" src="{% static 'iexecute.png' %}" height=200 width=200 /></div>
-<p>How can your EdTech offering compete in increasingly diverse and rapidly growing industry?</p>
-<p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solutions is the best option is not as easy as it may seem.</p>
-<p>Only someone with EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
-<p>At EdTech Sales Rep Consulting, we'll be able to analize your product and understand the unique story behind it that will be the catalyst for sales growth and large-scale adoption. In addition, we will know how your products&nbsp; stacks up again competing products and solutions. We'll be able to pinpoint the perfect strategy. We'll figure out what the competing companies are doing, how you can gain an advantage by reaching out to under-appreciated marketis in the education space that do not garner as much attention bu
+<h3 class="text-center pt-3"><a id="execute">Execute & Improve</h3></a>
+<div style="text-align:center;"><img class="img-fluid" src="{% static 'execute.png' %}" height=200 width=200 /></div>
+<p>Once you have invested time in EdTech market research, clearly defined your sales strategy, and hired the right sales superstars,
+  your EdTech company will still have to recognize and maximize your best assets and resources, all the while adjusting your operations and processes to meet new challenges.</p>
+<p>Every EdTech outfit needs an <i>experienced</i> sales manager to do this. However, there is no one-size-fits-all solution for every company. Depending on whether your EdTech company is in the start-up phase, growth phase, maturity phase, or any phase inbetween or beyond, it might be difficult to justify a full-time sales leader due to the overhead, time, and disruption.</p>
+<p>For this reason, Ed Tech Sales Rep Consulting offers their clients sales management support on an ongoing or project basis in a direct, hands-on capacity.
+We can work in-house or remotely with your existing team on a temporary basis as the provisional sales manager,
+  or even as a interim sales assoicate focused on "jump-starting" the prospecting channels and creating a valuable pipeline.  </p>
+<p></p>
 <br />
 <br />
 
