Update Services Page - Execute

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -189,8 +189,7 @@
 <br>
 <p>How can your EdTech offering compete in an increasingly diverse and rapidly growing industry?</p>
 <p>At EdTech Sales Rep Consutling, we understand the practices and sales strategies of the leading EdTech companies. Not only will we help you identify and implement a successful sales strategy, but we will also empower your salespeople with the tools and processes they need to uncover potential customers' business needs and motives for buying that align specifically with your unique EdTech solution.</p>
-<p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solution is the best option is not as easy as it may seem.</p>
-<p>Only someone with the EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
+<p>Right now, your EdTech solution has a competitive advantage over all the similar offerings in the market. Most likely, you already know this. But, getting the school administrators to realize why your solution is the best option is not as easy as it may seem.</p>=-09876t5r<p>Only someone with the EdTech sales experience that knows the marketplace intimately - and knows how to position products and services in front of administrators and teachers to generate the most interest -&nbsp; will be able to do so.</p>
 <p>At the same time, if any EdTech company is relying on the experience of their salespeople as the primary driver for growth, there is, or will eventually be, a problem. The lead generation, presentation, and closing methods must be repeatable and scalable. In addition, your sales processes need to evolve and improve over time in direct relation to how your customer's demands and needs constantly change. This is where EdTech Sales Rep Consulting will help. </p>
 <p>At EdTech Sales Rep Consulting, we'll be able to analyze your product and understand the unique story behind it that will be the catalyst for sales growth and large-scale adoption. In addition, we will know how your EdTech solution stacks up against competing products. We'll be able to pinpoint the perfect strategy. In doing so, we'll identify the correct stakeholders to target with sales and marketing outreach, and even uncover under-appreciated markets in the education space that do not always garner as much attention. For further guidance on your Market Research & Business Strategy, please <a href="#consultation">click here</a> to email us for a free consultation.
 <br />
@@ -214,11 +213,15 @@
 <div style="text-align:center;"><img class="img-fluid" src="{% static 'execute.png' %}" height=200 width=200 /></div>
 <p>Once you have invested time in EdTech market research, clearly defined your sales strategy, and hired the right sales superstars,
   your EdTech company will still have to recognize and maximize your best assets and resources, all the while adjusting your operations and processes to meet new challenges.</p>
-<p>Every EdTech outfit needs an <i>experienced</i> sales manager to do this. However, there is no one-size-fits-all solution for every company. Depending on whether your EdTech company is in the start-up phase, growth phase, maturity phase, or any phase inbetween or beyond, it might be difficult to justify a full-time sales leader due to the overhead, time, and disruption.</p>
-<p>For this reason, Ed Tech Sales Rep Consulting offers their clients sales management support on an ongoing or project basis in a direct, hands-on capacity.
+<p>Every EdTech outfit needs an <i>experienced</i> sales manager to do this. However, there is no one-size-fits-all solution for every company. Depending on whether your EdTech company is in the start-up phase, growth phase, maturity phase, or any phase inbetween or beyond, it might be difficult to justify hiring a full-time sales leader due to the overhead, time, and disruption.</p>
+<p>For this reason, Ed Tech Sales Rep Consulting offers their clients sales and sales management support on an ongoing or project basis in a direct, hands-on capacity.
 We can work in-house or remotely with your existing team on a temporary basis as the provisional sales manager,
   or even as a interim sales assoicate focused on "jump-starting" the prospecting channels and creating a valuable pipeline.  </p>
-<p></p>
+<p>It is safe to assume that the true value of your EdTech company lies in your technological products,
+   services, and solutions. By your company's nature, the ability to <i>sell</i> your technology is a bit beyond the scope of the primary competencies.
+   However, to surivive and profit, EdTech comanpanies have to develop these sales skills out of necessity. With EdTech Sales Rep Consulting, you can mitigate the risks
+   inherent in hiring and managing senior sales leaders - avoiding the steep learning curve that comes undertaking new sales endeavors -  by outsourcing your sales resposiblities to trusted experts.</p>
+   If you are interested in partnering with Ed Tech Sales Rep Consulting to Execute & Improve your current day-to-day sales operations, please <a href="#consultation">click here</a> to email us for a free consultation.</p>
 <br />
 <br />
 
