--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -66,12 +66,12 @@
 <main role="main">
 <div class="container">
 
-<h1 class="text-center pt-3">{{ blog.title }}</h1>
-<p class="text-center">{{ blog.pub_date }}</p>
-<img class="img-fluid" src="{{ blog.image.url }}" />
+<!-- <h1 class="text-center pt-3">{{ blog.title }}</h1>
+<p class="text-center">{{ blog.pub_date }}</p> -->
+
 <br />
 <br />
-<p>{{ blog.body }}</p>
+<p><img class="img-fluid" src="{{ blog.image.url }}" />{{ blog.body }}</p>
 
 </div>
 </main>
