Change Template for Detail Blog - Image 3

--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -71,7 +71,7 @@
 
 <br />
 <br />
-<p><img class="img-fluid" src="{{ blog.image.url }}" ALIGN=”left” /><BR CLEAR=”left” />{{ blog.body }}</p>
+<p><img class="img-fluid" src="{{ blog.image.url }}" ALIGN=”left” />{{ blog.body }}</p>
 
 </div>
 </main>
