Content About Page - 3

--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -170,7 +170,7 @@
             <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Services</a>
             <a class="nav-item nav-link" href="https://medium.com/@edtechsalesrep" target="_blank">Medium</a>
             <a class="nav-item nav-link" href="#">Podcast</a>
-            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="/blog/3/">About</a>
           </div>
         </div>
       </nav>
