--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -57,7 +57,7 @@
             <a class="nav-item nav-link active" href="{% url 'allblogs' %}">Services</a>
             <a class="nav-item nav-link" href="https://medium.com/@edtechsalesrep" target="_blank">Medium</a>
             <a class="nav-item nav-link" href="#">Podcast</a>
-            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="/blog/3/">About</a>
           </div>
         </div>
       </nav>
@@ -72,6 +72,7 @@
 <br />
 <br />
 <img class="img-fluid" src="{{ blog.image.url }}" style="float: left;" />{{ blog.body }}
+<p><p>
 <p>
 EdTech Sales Rep Consulting extends to our clients a deep understanding of what drives K-12 and higher education decision-makers to choose one technology solution over another. With this insight, we can provide our clients with actionable steps to sales process and methodology improvements to ensure profitability in spite of any dynamic internal staffing shits and changing external market forces.
 </P>
@@ -79,7 +80,7 @@ EdTech Sales Rep Consulting extends to our clients a deep understanding of what 
   Although our consultancy is buttressed by a high-level framework of sales process creation and enhancement along with executable skills training, EdTech Sales Rep Consulting does not rely solely on nonspecific business direction and instruction to achieve results. EdTech Sales Rep Consulting prides ourselves on being in the field, constantly and continuously engaging with K-12 schools and higher education organizations. We will have detailed support and recommended actions items for companies and sales executives of all levels of experience - ranging from which social media strategies are best suited for engaging with school administrators, to why and how EdTech should adopt and adapt traditional strategic account management techniques into school district and higher education technology sales.
 </p>
 
-For a taste of our please check out our articles on Medium.
+For a taste of the expertise that we can lend to our clients, please check out our articles on <a href="https://medium.com/@edtechsalesrep" target="_blank"> Medium</a>.
 
 </div>
 </main>
