--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -171,7 +171,7 @@
             <a class="nav-item nav-link" href="{% url 'allblogs' %}">Services</a>
             <a class="nav-item nav-link" target="_blank" href="https://medium.com/@edtechsalesrep">Medium</a>
             <a class="nav-item nav-link" href="#">Podcast</a>
-            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="/blog/3/">About</a>
           </div>
         </div>
       </nav>
