--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -41,6 +41,127 @@
           font-size: 3.5rem;
         }
       }
+
+
+          .form-style-7{
+          	max-width:500px;
+          	margin:50px auto;
+          	background:#fff;
+          	border-radius:2px;
+          	padding:20px;
+          	font-family: Arial, Helvetica, sans-serif;
+          }
+          .form-style-7 h1{
+          	display: block;
+          	text-align: center;
+          	padding: 0;
+          	margin: 0px 0px 20px 0px;
+          	color: #5C5C5C;
+          	font-size:x-large;
+          }
+          .form-style-7 ul{
+          	list-style:none;
+          	padding:0;
+          	margin:0;
+          }
+          .form-style-7 li{
+          	display: block;
+          	padding: 9px;
+          	border:1px solid #DDDDDD;
+          	margin-bottom: 30px;
+          	border-radius: 3px;
+          }
+          .form-style-7 li:last-child{
+          	border:none;
+          	margin-bottom: 0px;
+          	text-align: center;
+          }
+          .form-style-7 li > label{
+          	display: block;
+          	float: left;
+          	margin-top: -19px;
+          	background: #FFFFFF;
+          	height: 20px;
+          	padding: 2px 5px 2px 5px;
+          	color: #B9B9B9;
+          	font-size: 14px;
+          	overflow: hidden;
+          	font-family: Arial, Helvetica, sans-serif;
+          }
+          .form-style-7 input[type="text"],
+          .form-style-7 input[type="date"],
+          .form-style-7 input[type="datetime"],
+          .form-style-7 input[type="email"],
+          .form-style-7 input[type="number"],
+          .form-style-7 input[type="search"],
+          .form-style-7 input[type="time"],
+          .form-style-7 input[type="url"],
+          .form-style-7 input[type="password"],
+          .form-style-7 textarea,
+          .form-style-7 select
+          {
+          	box-sizing: border-box;
+          	-webkit-box-sizing: border-box;
+          	-moz-box-sizing: border-box;
+          	width: 100%;
+          	display: block;
+          	outline: none;
+          	border: none;
+          	height: 25px;
+          	line-height: 25px;
+          	font-size: 16px;
+          	padding: 0;
+          	font-family: Arial, Helvetica, sans-serif;
+          }
+          .form-style-7 input[type="text"]:focus,
+          .form-style-7 input[type="date"]:focus,
+          .form-style-7 input[type="datetime"]:focus,
+          .form-style-7 input[type="email"]:focus,
+          .form-style-7 input[type="number"]:focus,
+          .form-style-7 input[type="search"]:focus,
+          .form-style-7 input[type="time"]:focus,
+          .form-style-7 input[type="url"]:focus,
+          .form-style-7 input[type="password"]:focus,
+          .form-style-7 textarea:focus,
+          .form-style-7 select:focus
+          {
+          }
+          .form-style-7 li > span{
+          	background: #F3F3F3;
+          	display: block;
+          	padding: 3px;
+          	margin: 0 -9px -9px -9px;
+          	text-align: center;
+          	color: #C0C0C0;
+          	font-family: Arial, Helvetica, sans-serif;
+          	font-size: 11px;
+          }
+          .form-style-7 textarea{
+          	resize:none;
+          }
+          .form-style-7 input[type="submit"],
+          .form-style-7 input[type="button"]{
+          	background: #2471FF;
+          	border: none;
+          	padding: 10px 20px 10px 20px;
+          	border-bottom: 3px solid #5994FF;
+          	border-radius: 3px;
+          	color: #D2E2FF;
+          }
+          .form-style-7 input[type="submit"]:hover,
+          .form-style-7 input[type="button"]:hover{
+          	background: #6B9FFF;
+          	color:#fff;
+          }
+
+
+
+
+
+
+
+
+
     </style>
     <!-- Custom styles for this template -->
     <link href="album.css" rel="stylesheet">
@@ -80,7 +201,90 @@ EdTech Sales Rep Consulting extends to our clients a deep understanding of what 
   Although our consultancy is buttressed by a high-level framework of sales process creation and enhancement along with executable skills training, EdTech Sales Rep Consulting does not rely solely on nonspecific business direction and instruction to achieve results. EdTech Sales Rep Consulting prides ourselves on being in the field, constantly and continuously engaging with K-12 schools and higher education organizations. We will have detailed support and recommended actions items for companies and sales executives of all levels of experience - ranging from which social media strategies are best suited for engaging with school administrators, to why and how EdTech should adopt and adapt traditional strategic account management techniques into school district and higher education technology sales.
 </p>
 
+<p>
 For a taste of the expertise that we can lend to our clients, please check out our articles on <a href="https://medium.com/@edtechsalesrep" target="_blank"> Medium</a>.
+</p>
+<p>
+For a completely free consultation, please contact us by completing and submitting   <a href="#consultation">  this form</a>.
+</p>
+<p>
+  Follow us on Twitter.
+</p>
+  <p>
+
+  </p>
+
+
+<hr style="height:2px;border-width:0;color:gray;background-color:gray">
+
+        <div ALIGN="center">
+<!-- <a id="consultation"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/viewform?embedded=true" width="640" height="1097" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">Loading…</iframe></a> -->
+<a id="consultation">
+
+<script type="text/javascript">
+  //auto expand textarea
+  function adjust_textarea(h) {
+      h.style.height = "20px";
+      h.style.height = (h.scrollHeight)+"px";
+  }
+  </script>
+<script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"
+  onload="if(submitted) {window.location='/blog/';}"></iframe>
+<form class="form-style-7" action="https://docs.google.com/forms/d/e/1FAIpQLScQ-Emv7Uq3aPdCxEM0uRNWtOil1ruzKf527MW_UxMUAneS6w/formResponse" method="post" target="hidden_iframe" onsubmit="submitted=true;">
+
+<h1>Free Consultation Request</h1>
+  <ul>
+  <li>
+      <label for="firstname">First Name*</label>
+      <input type="text" maxlength="100" name="entry.672116849" required>
+      <span>Enter your first name here</span>
+  </li>
+  <li>
+      <label for="lastname">Last Name*</label>
+      <input type="text" maxlength="100" name="entry.284957780" required>
+      <span>Enter your last name here</span>
+  </li>
+  <li>
+      <label for="title">Title*</label>
+      <input type="text" maxlength="100" name="entry.732400030" required>
+      <span>Enter your business title or position here</span>
+    </li>
+    <li>
+      <label for="title">Company*</label>
+      <input type="text" maxlength="100" name="entry.1166157218" required>
+      <span>Enter the name of the company for which you work here</span>
+    </li>
+    <li>
+      <label>Email*</label>
+      <input type="email" maxlength="100" name="entry.811627178" required>
+      <span>Enter your email here</span>
+    </li>
+    <li>
+      <label>Phone*</label>
+      <input type="number" maxlength="100" name="entry.467692756" required>
+      <span>Enter your preffered phone number here</span>
+    </li>
+    <li>
+      <label>Story</label>
+      <textarea rows="5" name="entry.444309058"></textarea>
+      <span>Tell me a little bit more about yourself or your EdTech company here</span>
+    </li>
+    <li>
+      <label>Purpose</label>
+      <textarea rows="5" name="entry.1149359166"></textarea>
+      <span>Let me know if there is anything in particular you would like to discuss here</span>
+    </li>
+    <li>
+      <button type="submit">Send This</button>
+    </li>
+</ul>
+</form>
+</a>
+
+
+</div>
+
 
 </div>
 </main>
