--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -184,7 +184,7 @@
 <!--- <h2>Latest Posts</h2>
 <hr /> -->
 
-<h3 class="text-center pt-3">Market Research & Business Strategy</h3>
+<h3 class="text-center pt-3">Market Research & Strategy</h3>
 <div style="text-align:center;"><img class="img-fluid" src="{% static 'plan.png' %}" height=200 width=200 /></div>
 <br>
 <p>How can your EdTech offering compete in an increasingly diverse and rapidly growing industry?</p>
